--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ body{
     background-color: #607274;
 }
 
+h1{
+    text-align: center;
+    margin-bottom: 35px;
+    padding: 0px 10px;
+}
+
 #captcha-container{
     display: flex;
     flex-direction: column;
@@ -28,7 +34,7 @@ body{
 
 #captcha-container img {
     width: 100%;
-    height: 100px;
+
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 10px;
